--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,6 +13,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4 
 
+  # portainer portal username: admin password: admin12345
   portainer:
     image: portainer/portainer-ce
 
