--- a/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+	  <PackageReference Include="Dapper" Version="2.0.123" />
+	  <PackageReference Include="Npgsql" Version="6.0.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
   </ItemGroup>
 
 </Project>
