--- a/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
+++ b/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
@@ -7,6 +7,12 @@
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "http://localhost:5003;https://localhost:5004"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
